# crop-disease-detector

./: Dockerfile  LICENSE  README.md  app.py  environment.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
data/: easy_fields.json  hard_fields.json  medium_fields.json
server/: app.py
