[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crop-disease-detector"
version = "1.0.0"
description = "OpenEnv crop disease detector environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openenv-core>=0.1.0",
  "uv>=0.1.0",
  "openai>=1.30.0",
  "pydantic>=2.0.0",
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "numpy>=1.26.0",
  "python-dotenv>=1.0.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
py-modules = ["app", "environment", "tasks", "inference"]

[tool.setuptools.packages.find]
include = ["server*"]
